# feature_store

./: README.md  docker-compose.yml  nohup.out  pom.xml
.github/workflows/: ai-code-review.yml
docs/: CUDA_CODEGEN.md  FEATURE_STORE_GUIDE.md
examples/: EXAMPLE.md  pom.xml
frontend/themes/feature-store/: styles.css
models/: model.joblib  model.ubj  ranker.joblib  ranker.ubj  training_result.json
python/: dataset_tool.py  grpc_client.py  import_dataset.py  requirements.txt  run_example.py
python/criteo_example/: dataset.py  dataset_manifest.json  inference.py  run_criteo_example.py  train.py
python/criteo_example/models/: training_result.json
python/cuda_codegen/: __init__.py  __main__.py  cli.py  generator.py  verify.py
python/gbdt_example/: dataset.py  dataset_manifest.json  inference.py  run_gbdt_example.py  train.py
python/gbdt_example/exports/: gbdt_20260222_174931.parquet
python/gbdt_example/models/: model.joblib  model.ubj  (+1 more)
python/mslr_example/: dataset.py  dataset_manifest.json  inference.py  run_mslr_example.py  train.py
runtime/: Cargo.toml  Dockerfile  README.md  build.rs
runtime/clients/go/: Makefile  client.go  go.mod
runtime/clients/go/examples/: main.go
runtime/clients/java/: pom.xml
runtime/clients/java/src/main/java/com/platform/scorched/: Example.java  ScoringClient.java
runtime/clients/rust/: Cargo.toml  build.rs
runtime/clients/rust/examples/: benchmark.rs  score_example.rs
runtime/clients/rust/src/: lib.rs
runtime/ffi/: scoring_shim.c
runtime/proto/: scoring.proto
runtime/scripts/: build.sh  test.sh
runtime/src/: config.rs  dataset.rs  engine.rs  ffi.rs  grpc_service.rs  main.rs  metrics.rs
scripts/: build_cuda.sh  generate_cuda.sh  generate_split_cuda.sh  generate_split_library.sh  verify_scoring.sh
(+53 files in other folders)
