[package]
name = "scorched"
version = "0.1.0"
edition = "2021"
description = "GBDT scoring runtime with gRPC, multi-dataset support, and CPU/CUDA backends"
license = "MIT"

[[bin]]
name = "scorched"
path = "src/main.rs"

[features]
default = []
cuda = []

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25"
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Utilities
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
bytes = "1"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"

[build-dependencies]
tonic-build = "0.12"
cc = "1"

[dev-dependencies]
tempfile = "3"
